1.3.3
	+ Bugfix in logs consolidation, now it works
1.1.20
	+ New release
1.1.10
	+ Initial release