@@ -63,6 +63,13 @@ sub syncRows
 {
     my ($self, $currentRows) = @_;
 
+    # If the GConf module is readonly, return current rows
+    if ( $self->{'gconfmodule'}->isReadOnly() ) {
+        return undef;
+    }
+
+    my $modIsChanged = EBox::Global->getInstance()->modIsChanged('ids');
+
     my $net = EBox::Global->modInstance('network');
     my $ifaces = $net->ifaces();
     my %newIfaces =
@@ -85,6 +92,11 @@ sub syncRows
         next if exists $newIfaces{$ifaceName};
         $self->removeRow($id);
         $modified = 1;
+    }
+
+    if ($modified and not $modIsChanged) {
+        $self->{'gconfmodule'}->_saveConfig();
+        EBox::Global->getInstance()->modRestarted('ids');
     }
 
     return $modified;
